# freeplay-python

./: .env.test.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GENAI_TESTING_GUIDE.md  Makefile  PR_DESCRIPTION.md  PYTHON_GENAI_TESTING_GUIDE.md  README.md  devenv.sh  pyproject.toml
.github/: dependabot.yml  dependency-review-config.yml
examples/: azure_example.py  baseten_mistral_example.py  bedrock_converse_media_image.py  bedrock_example.py  bundle_example.py  bundle_with_history_example.py  customer_utils.py  example.py  example_anthropic.py  example_openai.py  function_call.py  gemini_api_example.py  genai_tool_schema_example.py  history_example.py  image_openai.py  media_audio_openai.py  media_image_openai.py  media_pdf_openai.py  minimal_example.py  openai_batch_api.py  openai_responses_api.py  sagemaker_llama3_example.py  sdk_example.py  server_swap_example.py  session_delete.py  test_cases_example.py  test_run_example.py  test_run_example_anthropic.py  test_run_example_openai.py  test_run_history_example.py  test_run_trace_example.py  test_run_with_media.py  test_suite_prompt_example.py  test_suite_trace_example.py  testing_example.py  thin_azure_example.py  thin_bedrock_example.py  thin_bundle_example.py  thin_example.py  thin_function_call.py  (+4 more)
scripts/: repl_setup.py
tests/: __init__.py  slow_test_support.py  test_adapters.py  test_api_support.py  test_freeplay.py  test_freeplay_cli.py  test_freeplay_test_run.py  test_freeplay_thin.py  test_genai_tools.py  test_llm_parameters.py  test_test_suites.py  test_traces.py  test_utils.py
(+38 files in other folders)
