[project]
name = "freeplay"
version = "0.6.1"
description = ""
authors = [
    {name = "Freeplay Engineering", email = "support@freeplay.ai"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.0,<3.0.0dev",
    "dacite>=1.8.0,<2.0.0",
    "click>=8.1.7,<9.0.0",
    "pystache>=0.6.5,<1.0.0",
]


[project.scripts]
freeplay = "freeplay.freeplay_cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = [
    "protobuf>=5.29.6",
    "pyasn1>=0.6.3",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2.0.0",
    "pyright>=1.1.405",
    "ruff>=0.9.7,<1.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "anthropic[bedrock]>=0.39.0,<1.0.0",
    "openai==2.30.0",
    "boto3>=1.34.97,<2.0.0",
    "google-cloud-aiplatform>=1.133.0,<2.0.0",
    "httpx>=0.28.1",
    "responses>=0.23.1,<1.0.0",
    "respx>=0.20.2,<1.0.0",
]

test = [
    "responses>=0.23.1,<1.0.0",
    "respx>=0.20.2,<1.0.0",
]
